// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DonutChart component renders a donut chart 1`] = `
.c1.c1 {
  margin-left: 0px;
  margin-right: 0px;
}

.c2 {
  text-align: right;
}

.c0 {
  max-width: 150px;
  min-width: 100px;
}

@media (max-width:767px) {
  .c0 {
    min-width: 0px;
    max-width: 100px;
  }
}

<div
  class="euiFlexGroup emotion-euiFlexGroup-m-flexStart-center-row"
>
  <div
    class="euiFlexItem emotion-euiFlexItem-growZero"
    style="position:relative"
  >
    <div
      aria-roledescription="visualization"
      class="echChart"
      data-testid="echChart"
      role="graphics-document"
      style="width:125px;height:125px"
    >
      <div
        class="echChartContent"
      >
        <div
          class="echChartBackground"
          style="background-color:transparent"
        />
        <div
          class="echChartStatus"
          data-ech-render-complete="false"
          data-ech-render-count="0"
        />
        <div
          class="echChartResizer"
        />
        <div
          class="echContainer"
        />
      </div>
    </div>
  </div>
  <div
    class="euiFlexItem emotion-euiFlexItem-grow-1"
  >
    <div
      class="c0"
    >
      <div
        class="euiFlexGroup emotion-euiFlexGroup-l-flexStart-stretch-row"
      >
        <span
          class="euiFlexItem c1 emotion-euiFlexItem-growZero"
        >
          <div
            class="euiHealth emotion-euiHealth-s"
          >
            <div
              class="euiFlexGroup emotion-euiFlexGroup-xs-flexStart-center-row"
            >
              <div
                class="euiFlexItem emotion-euiFlexItem-growZero"
              >
                <span
                  color="#C61E25"
                  data-euiicon-type="dot"
                />
              </div>
              <div
                class="euiFlexItem emotion-euiFlexItem-growZero"
              />
            </div>
          </div>
        </span>
        <span
          class="euiFlexItem c1 emotion-euiFlexItem-growZero"
          data-test-subj="xpack.synthetics.snapshot.donutChart.down.label"
        >
          Down
        </span>
        <span
          class="euiFlexItem c2 emotion-euiFlexItem-grow-1"
          data-test-subj="xpack.synthetics.snapshot.donutChart.down"
        >
          32
        </span>
      </div>
      <div
        class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
      />
      <div
        class="euiFlexGroup emotion-euiFlexGroup-l-flexStart-stretch-row"
      >
        <span
          class="euiFlexItem c1 emotion-euiFlexItem-growZero"
        >
          <div
            class="euiHealth emotion-euiHealth-s"
          >
            <div
              class="euiFlexGroup emotion-euiFlexGroup-xs-flexStart-center-row"
            >
              <div
                class="euiFlexItem emotion-euiFlexItem-growZero"
              >
                <span
                  color="#CAD3E2"
                  data-euiicon-type="dot"
                />
              </div>
              <div
                class="euiFlexItem emotion-euiFlexItem-growZero"
              />
            </div>
          </div>
        </span>
        <span
          class="euiFlexItem c1 emotion-euiFlexItem-growZero"
          data-test-subj="xpack.synthetics.snapshot.donutChart.up.label"
        >
          Up
        </span>
        <span
          class="euiFlexItem c2 emotion-euiFlexItem-grow-1"
          data-test-subj="xpack.synthetics.snapshot.donutChart.up"
        >
          95
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`DonutChart component renders a green check when all monitors are up 1`] = `
.c2.c2 {
  margin-left: 0px;
  margin-right: 0px;
}

.c3 {
  text-align: right;
}

.c1 {
  max-width: 150px;
  min-width: 100px;
}

.c0 {
  height: 42px;
  width: 42px;
  color: #017d73;
  top: 51px;
  left: 51px;
  position: absolute;
}

@media (max-width:767px) {
  .c1 {
    min-width: 0px;
    max-width: 100px;
  }
}

<div
  class="euiFlexGroup emotion-euiFlexGroup-m-flexStart-center-row"
>
  <div
    class="euiFlexItem emotion-euiFlexItem-growZero"
    style="position:relative"
  >
    <div
      aria-roledescription="visualization"
      class="echChart"
      data-testid="echChart"
      role="graphics-document"
      style="width:125px;height:125px"
    >
      <div
        class="echChartContent"
      >
        <div
          class="echChartBackground"
          style="background-color:transparent"
        />
        <div
          class="echChartStatus"
          data-ech-render-complete="false"
          data-ech-render-count="0"
        />
        <div
          class="echChartResizer"
        />
        <div
          class="echContainer"
        />
      </div>
    </div>
    <span
      class="c0 greenCheckIcon"
      data-euiicon-type="checkCircleFill"
    />
  </div>
  <div
    class="euiFlexItem emotion-euiFlexItem-grow-1"
  >
    <div
      class="c1"
    >
      <div
        class="euiFlexGroup emotion-euiFlexGroup-l-flexStart-stretch-row"
      >
        <span
          class="euiFlexItem c2 emotion-euiFlexItem-growZero"
        >
          <div
            class="euiHealth emotion-euiHealth-s"
          >
            <div
              class="euiFlexGroup emotion-euiFlexGroup-xs-flexStart-center-row"
            >
              <div
                class="euiFlexItem emotion-euiFlexItem-growZero"
              >
                <span
                  color="#C61E25"
                  data-euiicon-type="dot"
                />
              </div>
              <div
                class="euiFlexItem emotion-euiFlexItem-growZero"
              />
            </div>
          </div>
        </span>
        <span
          class="euiFlexItem c2 emotion-euiFlexItem-growZero"
          data-test-subj="xpack.synthetics.snapshot.donutChart.down.label"
        >
          Down
        </span>
        <span
          class="euiFlexItem c3 emotion-euiFlexItem-grow-1"
          data-test-subj="xpack.synthetics.snapshot.donutChart.down"
        >
          0
        </span>
      </div>
      <div
        class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
      />
      <div
        class="euiFlexGroup emotion-euiFlexGroup-l-flexStart-stretch-row"
      >
        <span
          class="euiFlexItem c2 emotion-euiFlexItem-growZero"
        >
          <div
            class="euiHealth emotion-euiHealth-s"
          >
            <div
              class="euiFlexGroup emotion-euiFlexGroup-xs-flexStart-center-row"
            >
              <div
                class="euiFlexItem emotion-euiFlexItem-growZero"
              >
                <span
                  color="#CAD3E2"
                  data-euiicon-type="dot"
                />
              </div>
              <div
                class="euiFlexItem emotion-euiFlexItem-growZero"
              />
            </div>
          </div>
        </span>
        <span
          class="euiFlexItem c2 emotion-euiFlexItem-growZero"
          data-test-subj="xpack.synthetics.snapshot.donutChart.up.label"
        >
          Up
        </span>
        <span
          class="euiFlexItem c3 emotion-euiFlexItem-grow-1"
          data-test-subj="xpack.synthetics.snapshot.donutChart.up"
        >
          95
        </span>
      </div>
    </div>
  </div>
</div>
`;
